--- a/MyMarket/MyMarket.csproj
+++ b/MyMarket/MyMarket.csproj
@@ -571,6 +571,7 @@
     <Content Include="AdminData\docs\highlights\highlight.min.css" />
     <Content Include="AdminData\docs\highlights\highlight.min.js" />
     <Content Include="AdminData\src\counter.txt" />
+    <Content Include="Admin\Category.aspx" />
     <Content Include="Admin\Contact.aspx" />
     <Content Include="Admin\Dashboard.aspx" />
     <Content Include="CustomerData\css\style.css" />
@@ -635,6 +636,13 @@
     </Compile>
     <Compile Include="Admin\Admin.Master.designer.cs">
       <DependentUpon>Admin.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Category.aspx.cs">
+      <DependentUpon>Category.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Category.aspx.designer.cs">
+      <DependentUpon>Category.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
