Update connect to db

--- a/MyMarket/Web.config
+++ b/MyMarket/Web.config
@@ -8,6 +8,10 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
+
+  <connectionStrings>
+    <add name="cs" connectionString="Data Source = YAROSLAVPC; Initial Catalog = Market; Integrated Security = true" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
