--- a/MyMarket/MyMarket.csproj
+++ b/MyMarket/MyMarket.csproj
@@ -718,6 +718,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="CustomerData\lib\owlcarousel\LICENSE" />
