--- a/MyMarket/MyMarket.csproj
+++ b/MyMarket/MyMarket.csproj
@@ -498,6 +498,29 @@
     <Content Include="AdminData\assets\libs\raphael\license.txt" />
     <Content Include="AdminData\assets\libs\raphael\raphael.min.js" />
     <Content Include="AdminData\assets\libs\raphael\raphael.no-deps.min.js" />
+    <Content Include="AdminData\datatables\css\dataTables.bootstrap4.min.css" />
+    <Content Include="AdminData\datatables\css\icon-font.min.css" />
+    <Content Include="AdminData\datatables\css\jquery.dataTables.min.css" />
+    <Content Include="AdminData\datatables\css\responsive.bootstrap4.min.css" />
+    <Content Include="AdminData\datatables\css\responsive.dataTables.min.css" />
+    <Content Include="AdminData\datatables\images\sort_asc.png" />
+    <Content Include="AdminData\datatables\images\sort_asc_disabled.png" />
+    <Content Include="AdminData\datatables\images\sort_both.png" />
+    <Content Include="AdminData\datatables\images\sort_desc.png" />
+    <Content Include="AdminData\datatables\images\sort_desc_disabled.png" />
+    <Content Include="AdminData\datatables\js\buttons.bootstrap4.min.js" />
+    <Content Include="AdminData\datatables\js\buttons.flash.min.js" />
+    <Content Include="AdminData\datatables\js\buttons.html5.min.js" />
+    <Content Include="AdminData\datatables\js\buttons.print.min.js" />
+    <Content Include="AdminData\datatables\js\datatable-setting.js" />
+    <Content Include="AdminData\datatables\js\dataTables.bootstrap4.min.js" />
+    <Content Include="AdminData\datatables\js\dataTables.buttons.min.js" />
+    <Content Include="AdminData\datatables\js\dataTables.responsive.min.js" />
+    <Content Include="AdminData\datatables\js\jquery.dataTables.min.js" />
+    <Content Include="AdminData\datatables\js\jszip.min.js" />
+    <Content Include="AdminData\datatables\js\pdfmake.min.js" />
+    <Content Include="AdminData\datatables\js\responsive.bootstrap4.min.js" />
+    <Content Include="AdminData\datatables\js\vfs_fonts.js" />
     <Content Include="AdminData\dist\css\fonts\Gilmer-Bold.svg" />
     <Content Include="AdminData\dist\css\fonts\Gilmer-Heavy.svg" />
     <Content Include="AdminData\dist\css\fonts\Gilmer-Medium.svg" />
@@ -1046,6 +1069,10 @@
     <Content Include="AdminData\src\README.md" />
     <Content Include="Customer\Customer.Master" />
     <Content Include="Admin\Admin.Master" />
+    <Content Include="AdminData\datatables\fonts\ionicons.ttf" />
+    <Content Include="AdminData\datatables\fonts\ionicons.woff" />
+    <Content Include="AdminData\datatables\fonts\themify.ttf" />
+    <Content Include="AdminData\datatables\fonts\themify.woff" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
